[package]
name = "cpp-inherit"
version = "0.1.1"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Macros for enabling you to subclass a Rust struct from a C++ class"
documentation = "https://docs.rs/cpp-inherit"
repository = "https://github.com/jam1garner/cpp-inherit"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.35", features = ["full", "parsing", "extra-traits"]}
quote = "1.0.7"
object = "0.20"
typed-arena = "2.0"
gimli = "0.22"
memmap = "0.7"
